--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "2q2r-demo",
-  "version": "1.0.0",
-  "description": "This is a demo of the 2Q2R library and set of tools.",
-  "main": "index.js",
-  "scripts": {
-    "prestart": "./pre_start.sh",
-    "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alinVD/2Q2R-demo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alinVD/2Q2R-demo/issues"
-  },
-  "homepage": "https://github.com/alinVD/2Q2R-demo#readme",
-  "devDependencies": {
-    "connect-livereload": "^0.5.4",
-    "faker": "^3.0.1",
-    "forever": "^0.15.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "typescript": "^1.5.3"
-  },
-  "dependencies": {
-    "angular-messages": "^1.5.7",
-    "bcryptjs": "^2.3.0",
-    "bluebird": "^3.4.1",
-    "body-parser": "^1.14.1",
-    "config": "^1.21.0",
-    "connect-mongo": "^1.2.1",
-    "express": "^4.13.3",
-    "express-sequelize-session": "^0.4.0",
-    "express-session": "^1.11.3",
-    "gulp-shell": "^0.4.3",
-    "gulp-typescript": "^2.9.0",
-    "lodash": "^3.10.1",
-    "mongoose": "^4.5.5",
-    "morgan": "^1.6.1",
-    "multer": "^1.1.0",
-    "node-uuid": "^1.4.7",
-    "passport": "^0.3.2",
-    "passport-challenge": "^0.1.3",
-    "passport-local": "^1.0.0",
-    "passport-localapikey": "0.0.3",
-    "password-hash": "^1.2.2",
-    "q": "^1.4.1",
-    "sequelize": "^3.23.6",
-    "serve-static": "^1.10.0",
-    "sqlite3": "^3.1.4",
-    "typescript-formatter": "^1.0.0",
-    "typings": "^1.3.1",
-    "unirest": "^0.5.0",
-    "validator": "^4.0.6"
-  }
+    "name": "2q2r-demo",
+    "version": "1.0.0",
+    "description": "This is a demo of the 2Q2R library and set of tools.",
+    "main": "index.js",
+    "scripts": {
+        "prestart": "./pre_start.sh",
+        "start": "gulp",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alinVD/2Q2R-demo.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/alinVD/2Q2R-demo/issues"
+    },
+    "homepage": "https://github.com/alinVD/2Q2R-demo#readme",
+    "devDependencies": {
+        "connect-livereload": "^0.5.4",
+        "faker": "^3.0.1",
+        "forever": "^0.15.1",
+        "gulp": "^3.9.0",
+        "gulp-concat": "^2.6.0",
+        "gulp-livereload": "^3.8.1",
+        "gulp-nodemon": "^2.0.4",
+        "gulp-sourcemaps": "^1.5.2",
+        "typescript": "2.2.1"
+    },
+    "dependencies": {
+        "angular-messages": "^1.5.7",
+        "bcryptjs": "^2.3.0",
+        "bluebird": "^3.4.1",
+        "body-parser": "^1.14.1",
+        "config": "^1.21.0",
+        "connect-mongo": "^1.2.1",
+        "express": "^4.13.3",
+        "express-sequelize-session": "^0.4.0",
+        "express-session": "^1.11.3",
+        "gulp-shell": "^0.4.3",
+        "gulp-typescript": "^2.9.0",
+        "lodash": "^3.10.1",
+        "mongoose": "^4.5.5",
+        "morgan": "^1.6.1",
+        "multer": "^1.1.0",
+        "node-uuid": "^1.4.7",
+        "passport": "^0.3.2",
+        "passport-challenge": "^0.1.3",
+        "passport-local": "^1.0.0",
+        "passport-localapikey": "0.0.3",
+        "password-hash": "^1.2.2",
+        "q": "^1.4.1",
+        "sequelize": "^3.23.6",
+        "serve-static": "^1.10.0",
+        "sqlite3": "^3.1.4",
+        "typescript-formatter": "^1.0.0",
+        "typings": "^1.3.1",
+        "unirest": "^0.5.0",
+        "validator": "^4.0.6"
+    }
 }
