--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "gulp-livereload": "^3.8.1",
         "gulp-nodemon": "^2.0.4",
         "gulp-sourcemaps": "^1.5.2",
-        "typescript": "2.2.1"
+        "typescript": "^2.2.1"
     },
     "dependencies": {
         "angular-messages": "^1.5.7",
